Update README (#805)
This pull request updates the README of the repository. The documentation for integration tests and logging has been relocated to separate files:
- docs/TESTING.md
- docs/LOGGING.md